--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
@@ -26,6 +27,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.400.0",
     "react": "^18.2.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.1",
     "tailwind-merge": "^2.0.0",
